<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.iqianggou.android.merchantapp.ui.activity.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="用户名"
        android:ems="10"
        android:id="@+id/et_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="密码"
        android:ems="10"
        android:id="@+id/et_password" />

    <Button
        android:text="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login" />

    <Button
        android:text="register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register" />
</LinearLayout>
